--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </div>
 
     <!--link js-->
-    <script src="script.js"></script>
+    <script src="js/script.js"></script>
     <!-- script Bootstrap -->
     <script
       src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
