--- a/index.html
+++ b/index.html
@@ -9,11 +9,31 @@
       integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I"
       crossorigin="anonymous"
     />
+    <!-- link css -->
+    <link rel="stylesheet" href="css/style.css" />
     <title>To Do List</title>
   </head>
   <body>
-    <div class="container mt-5">
-      <h1>To Do List</h1>
+    <div class="bg card-img-overlay">
+      <div class="container text-center mt-5 text-white">
+        <h1>To do list with <span class="text-warning">JS</span></h1>
+      </div>
+      <div class="text-center mt-5">
+        <input
+          type="text"
+          class="mr-3 barre1"
+          placeholder="   Nouvelle tâche..."
+        />
+        <button class="rounded bg-primary text-white border-primary btn">
+          Ajouter
+        </button>
+      </div>
+      <div class="text-center text-white mt-4">
+        <p>Le 15/06/2022</p>
+      </div>
+      <div class="text-center mt-4">
+        <input type="text" class="barre2" />
+      </div>
     </div>
 
     <!--link js-->
