delete and done

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </head>
   <body>
     <div class="bg card-img-overlay">
-      <div class="container text-center mt-5 text-white">
+      <div class="text-center mt-5 text-white">
         <h1>To do list with <span class="text-warning">JS</span></h1>
       </div>
       <div class="text-center mt-5" id="newtask">
@@ -35,9 +35,7 @@
       <div class="text-center text-white mt-4">
         <p>Le 15/06/2022</p>
       </div>
-      <div class="text-center mt-4">
-        <input type="text" class="barre2" id="task" />
-      </div>
+      <div class="text-center mt-4 barre2" id="task"></div>
     </div>
 
     <!--link js-->
